<resources>
    <string name="app_name">SmartCalculator</string>
    <string name="menuThemes">Themes</string>
    <string name="menuCalculator">Calculator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="buttonDelete">del</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_0">0</string>
    <string name="button_x">x</string>
    <string name="button_dot">.</string>
    <string name="button_numbers">Numbers</string>
    <string name="button_signs">Signs</string>
    <string name="button_solution">Solution</string>
    <string name="ButtonSignMinus">-</string>
    <string name="ButtonSignPlus">+</string>
    <string name="ButtonSignMultiply">*</string>
    <string name="ButtonSignDivision">/</string>
    <string name="ButtonSignEqual">=</string>
    <string name="buttonSqrt">√</string>
    <string name="buttonLeftBracket">(</string>
    <string name="buttonRightBracket">)</string>
    <string name="editTextMultiline">Write your burda</string>
    <string name="hintText">write</string>

    <string name="button">Button</string>

    <string name="textview">TextView</string>
    <string name="fullsolution">FullSolution</string>
    <string name="themes">Themes</string>
    <string name="substraction">Substraction</string>
    <string name="division">Division</string>
    <string name="multiplying">Multiplying</string>
    <string name="answer">Answer</string>


    <string name="buttonThemeMultiplying">You should to multiply</string>
    <string name="buttonThemeDivision">You should to division</string>
    <string name="buttonThemeSubtraction">You should to subtraction</string>
</resources>